--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import "helper";
 * {
   margin: 0;
   padding: 0;
@@ -22,4 +23,10 @@ ul, ol {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+body {
+  font-family: $font-hei;
+  font-size: 16px;
+  line-height: 1.2;
 }
