--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import "helper";
+
 * {
   margin: 0;
   padding: 0;
@@ -21,7 +22,7 @@ ul, ol {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: no·ne;
   color: inherit;
 }
 
