--- a/src/index.scss
+++ b/src/index.scss
@@ -22,7 +22,7 @@ ul, ol {
 }
 
 a {
-  text-decoration: no·ne;
+  text-decoration: none;
   color: inherit;
 }
 
@@ -30,4 +30,11 @@ body {
   font-family: $font-hei;
   font-size: 16px;
   line-height: 1.2;
+}
+
+.icon {
+  display: block;
+  width: 1.5rem;
+  height: 1.5rem;
+  fill: #606266;
 }
